--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="./style/main.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <div class="wrapper">
@@ -30,6 +30,6 @@
     <div class="game-box"></div>
   </div>
   <script src="//cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
